# Apollo-Federation-Mutation-Demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml
apollo-router/: router.yaml  supergraph.graphql  supergraph.yaml  supergraph_compose.sh
apollo-router/subgraphs/: accounts.graphql  inventory.graphql  products.graphql  reviews.graphql
services/accounts/: dockerfile  setup.py
services/accounts/accounts/: graphql.py  main.py  repository.py  stubs.py
services/inventory/: dockerfile  setup.py
services/inventory/inventory/: graphql.py  main.py  repository.py  stubs.py
services/products/: dockerfile  setup.py
services/products/products/: graphql.py  main.py  repository.py  stubs.py
services/reviews/: dockerfile  setup.py
services/reviews/reviews/: graphql.py  main.py  repository.py  stubs.py
